--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi>=0.115.12
 httpx>=0.28.1
 jinja2>=3.1.6
 mypy>=1.15.0
+pdftoimage>=1.17.0
 pydantic>=2.11.5
 pydantic[email]>=2.11.5
 sqlmodel>=0.0.24
