add postgres db

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-CONFIG = config.dev.json
-LOGGING = logging.dev.json
-DBNAME = dev.db
+CONFIG=config.dev.json
+LOGGING=logging.dev.json
+
+POSTGRES_DATABASE=mrkrdev
+POSTGRES_USER=mrkrdev
+POSTGRES_PASSWORD=
+POSTGRES_PORT=5432
+POSTGRES_HOST=localhost
