--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "outDir": "../frontend/static/js",
-        "target": "es6",
-        "module": "es6",
+        "target": "esnext",
+        "module": "esnext",
         "strict": true,
         "rootDir": "../frontend/components",
         "sourceMap": false,
