--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=80.9.0", "setuptools_scm[toml]>=8.3.1"]
+requires = ["setuptools>=80.9.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "mrkr"
-dynamic = ["version"]
+version = "2.0.0b1"
 authors = [
   { name="Max Brixner", email="max.brixner@gmail.com" },
 ]
@@ -58,6 +58,3 @@ dev = [
 
 [tool.setuptools]
 packages = ["mrkr"]
-
-[tool.setuptools_scm]
-version_file = "mrkr/_version.py"
