--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,30 +17,62 @@
         },
         {
             "type": "shell",
+            "label": "build docker",
+            "command": "docker compose -f .deploy/docker.app.yaml --env-file .env build",
+            "problemMatcher": [],
+            "group": "build",
+        },
+        {
+            "type": "shell",
+            "label": "run docker",
+            "command": "docker compose -f .deploy/docker.app.yaml --env-file .env up -d",
+            "problemMatcher": [],
+            "group": "build",
+        },
+        {
+            "type": "shell",
+            "label": "run docker (background)",
+            "command": "docker compose -f .deploy/docker.app.yaml --env-file .env up -d",
+            "problemMatcher": [],
+            "group": "build",
+        },
+        {
+            "type": "shell",
+            "label": "enter docker bash",
+            "command": "docker compose -f .deploy/docker.app.yaml --env-file .env exec app bash",
+            "problemMatcher": [],
+            "group": "test"
+        },
+        {
+            "type": "shell",
+            "label": "stop docker",
+            "dependsOn": [
+                "start database"
+            ],
+            "command": "docker compose -f .deploy/docker.app.yaml --env-file .env down",
+            "problemMatcher": [],
+            "group": "build",
+        },
+        {
+            "type": "shell",
             "label": "build dev database",
-            "command": "docker compose -f .deploy/docker.dev.yaml --env-file .env build",
+            "command": "docker compose -f .deploy/docker.db.yaml --env-file .env build",
             "problemMatcher": [],
             "group": "test",
         },
         {
             "type": "shell",
             "label": "run dev database",
-            "dependsOn": [
-                "build database"
-            ],
-            "command": "docker compose -f .deploy/docker.dev.yaml --env-file .env up -d",
+            "command": "docker compose -f .deploy/docker.db.yaml --env-file .env up -d",
             "problemMatcher": [],
             "group": "test",
         },
         {
             "type": "shell",
             "label": "stop dev database",
-            "dependsOn": [
-                "start database"
-            ],
-            "command": "docker compose -f .deploy/docker.dev.yaml --env-file .env down",
+            "command": "docker compose -f .deploy/docker.db.yaml --env-file .env down",
             "problemMatcher": [],
             "group": "test",
-        },
+        }
     ]
 }
