--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,7 +25,7 @@
         {
             "type": "shell",
             "label": "run docker",
-            "command": "docker compose -f .deploy/docker.app.yaml --env-file .env up -d",
+            "command": "docker compose -f .deploy/docker.app.yaml --env-file .env up",
             "problemMatcher": [],
             "group": "build",
         },
