--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,5 @@ POSTGRES_DATABASE=mrkrdev
 POSTGRES_USER=mrkrdev
 POSTGRES_PASSWORD=
 POSTGRES_PORT=5432
-POSTGRES_HOST=localhost
+# use "localhost" for development and "database" for docker
+POSTGRES_HOST=database
