--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ dependencies = [
   "sqlmodel>=0.0.24",
   "requests>=2.32.4",
   "uvicorn>=0.34.2",
-  "bcrypt>=4.3.0"
+  "bcrypt>=4.3.0",
+  "boto3>=1.39.13"
 ]
 
 # Project URLs for users
