--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ POSTGRES_PASSWORD=
 POSTGRES_PORT=5432
 # use "localhost" for development and "database" for docker
 POSTGRES_HOST=database
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION_NAME=
+AWS_ROLE_NAME=
+AWS_ACCOUNT_ID=
+AWS_BUCKET_NAME=
