add a fallback for old setuptools

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=80.9.0"]
+requires = ["setuptools==59.0.1"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -51,7 +51,7 @@ Issues = "https://github.com/maxbrixner/mrkr2/issues"
 dev = [
   "build>=1.2.2",
   "mypy>=1.15.0",
-  "setuptools>=68.0.0",
+  "setuptools>=59.0.1",  # Ensure compatibility with the environment
   "setuptools_scm[toml]>=8.3.1"
 ]
 
