--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,8 @@ dependencies = [
   "requests>=2.32.4",
   "uvicorn>=0.34.2",
   "bcrypt>=4.3.0",
-  "boto3>=1.39.13"
+  "boto3>=1.39.13",
+  "python-dotenv>=1.1.1"
 ]
 
 [project.urls]
